--- a/revenue.html
+++ b/revenue.html
@@ -1,101 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Revenue & Attendance | Cinema Analytics</title>
-  <link rel="stylesheet" href="revenue.css">
+  <link rel="stylesheet" href="revenue.css" />
   <script defer src="revenue.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poiret+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="main">
     <!-- Sidebar -->
     <nav class="sidebar">
-      <button class="toggle-btn">☰</button>
+      <input type="text" id="sidebarSearch" class="search-bar" placeholder="Search..." />
       <ul>
         <li><a href="HomePage.html">Overview</a></li>
         <li><a href="revenue.html" class="active">Revenue & Attendance</a></li>
         <li><a href="genre.html">Genre Analytics</a></li>
-        <li><a href="calendar.html">Seasonal Trends</a></li>
+        <li><a href="seasonal.html">Seasonal Trends</a></li>
         <li><a href="customers.html">Customer Insights</a></li>
         <li><a href="top.html">Top Performing Movies</a></li>
       </ul>
     </nav>
 
     <!-- Main Content -->
-    <main class="content">
+    <div class="content fade-in">
       <h1 class="page-title">Revenue & Attendance</h1>
       <p class="page-description">Explore global and regional cinema revenue trends, and see which movies dominated the box office over the years.</p>
 
-      <section class="viz-section">
-        <h2>Global Cinema Revenue Over The Years</h2>
-        <div class='tableauPlaceholder' id='viz1749175850565' style='position: relative'>
-          <noscript><a href='#'><img alt='Global Cinema Revenue Over The Years ' src='https://public.tableau.com/static/images/EN/ENTCGlobalCinemaRevenue/Sheet2/1_rss.png' style='border: none' /></a></noscript>
-          <object class='tableauViz'  style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='ENTCGlobalCinemaRevenue/Sheet2' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/EN/ENTCGlobalCinemaRevenue/Sheet2/1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='language' value='en-GB' />
-            <param name='filter' value='publish=yes' />
+      <!-- Data Visualisation Tabs -->
+      <div class="tabs">
+        <div class="tableauPlaceholder" id="viz1749175850565" style="position: relative;">
+          <noscript><a href="#"><img alt="Global Cinema Revenue" src="https://public.tableau.com/static/images/EN/ENTCGlobalCinemaRevenue/Sheet2/1_rss.png" /></a></noscript>
+          <object class="tableauViz" width="100%" height="600px" style="display:block;">
+            <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="ENTCGlobalCinemaRevenue/Sheet2" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param name="static_image" value="https://public.tableau.com/static/images/EN/ENTCGlobalCinemaRevenue/Sheet2/1.png" />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-GB" />
+            <param name="filter" value="publish=yes" />
           </object>
+        </div>        
+          <div class="insight-box">The highest spike in global revenue occurred during post-COVID recovery in 2021.</div>
         </div>
-      </section>
 
-      <section class="viz-section">
-        <h2>Revenue by Region (Australia)</h2>
-        <div class='tableauPlaceholder' id='viz1749176520198' style='position: relative'>
-          <noscript><a href='#'><img alt='Revenue By Region (States In Australia) ' src='https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1_rss.png' style='border: none' /></a></noscript>
-          <object class='tableauViz'  style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='RevenueByRegion_17491765003710/Sheet1' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='language' value='en-GB' />
-            <param name='filter' value='publish=yes' />
-          </object>
+        <div class="viz-card">
+          <h2>Australian Regional Revenue</h2>
+          <p class="viz-description">State-by-state breakdown of Australian cinema revenue.</p>
+          <div class="tableauPlaceholder" id="viz1749176520198" style="position: relative;">
+            <noscript>
+              <a href="#"><img alt="Revenue By Region (States In Australia)" src="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1_rss.png" style="border: none;" /></a>
+            </noscript>
+            <object class="tableauViz" width="100%" height="600px" style="display:block;">
+              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+              <param name="embed_code_version" value="3" />
+              <param name="site_root" value="" />
+              <param name="name" value="RevenueByRegion_17491765003710/Sheet1" />
+              <param name="tabs" value="no" />
+              <param name="toolbar" value="yes" />
+              <param name="static_image" value="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1.png" />
+              <param name="animate_transition" value="yes" />
+              <param name="display_static_image" value="yes" />
+              <param name="display_spinner" value="yes" />
+              <param name="display_overlay" value="yes" />
+              <param name="display_count" value="yes" />
+              <param name="language" value="en-GB" />
+              <param name="filter" value="publish=yes" />
+            </object>
+          </div>
+          <div class="insight-box">NSW and VIC contributed over 60% of the national box office revenue.</div>
         </div>
-      </section>
 
-      <section class="viz-section">
-        <h2>Top Grossing Movies (Last 15 Years)</h2>
-        <div class='tableauPlaceholder' id='viz1749176802153' style='position: relative'>
-          <noscript><a href='#'><img alt='Top Grossing Movies of the Last 15 Years ' src='https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1_rss.png' style='border: none' /></a></noscript>
-          <object class='tableauViz'  style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='TopGrossMovies/Sheet2' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='language' value='en-GB' />
-          </object>
+        <div class="viz-card">
+          <h2>Top Grossing Movies</h2>
+          <p class="viz-description">Franchise blockbusters have repeatedly dominated cinema revenue charts.</p>
+          <div class="tableauPlaceholder" id="viz1749176802153" style="position: relative;">
+            <noscript>
+              <a href="#"><img alt="Top Grossing Movies of the Last 15 Years" src="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1_rss.png" style="border: none;" /></a>
+            </noscript>
+            <object class="tableauViz" width="100%" height="600px" style="display:block;">
+              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+              <param name="embed_code_version" value="3" />
+              <param name="site_root" value="" />
+              <param name="name" value="TopGrossMovies/Sheet2" />
+              <param name="tabs" value="no" />
+              <param name="toolbar" value="yes" />
+              <param name="static_image" value="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1.png" />
+              <param name="animate_transition" value="yes" />
+              <param name="display_static_image" value="yes" />
+              <param name="display_spinner" value="yes" />
+              <param name="display_overlay" value="yes" />
+              <param name="display_count" value="yes" />
+              <param name="language" value="en-GB" />
+            </object>
+          </div>
+          <div class="insight-box">Avatar remains the top grossing film of the past 15 years with $2.9B in revenue.</div>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
   </div>
 </body>
 </html>
