--- a/customers.html
+++ b/customers.html
@@ -6,13 +6,12 @@
   <title>Customer Insights | Cinema Analytics</title>
   <link rel="stylesheet" href="customers.css" />
   <script defer src="customers.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="main">
     <!-- Sidebar -->
     <nav class="sidebar">
-      <button class="toggle-btn">☰</button>
       <ul>
         <li><a href="HomePage.html">Overview</a></li>
         <li><a href="revenue.html">Revenue & Attendance</a></li>
@@ -36,8 +35,6 @@
         <div class="stat-card">Late night sessions popular with Gen Z</div>
         <div class="stat-card">Senior visits spike mid-week</div>
         <div class="stat-card">75% of visitors buy tickets online</div>
-        <div class="stat-card">Event movies increase visits by 40%</div>
-        <div class="stat-card">Evening shows are busiest</div>
       </div>
 
       <!-- Tableau Visualisations -->
@@ -46,6 +43,7 @@
           <div class="viz-wrapper">
             <div class="viz-title">Visit Frequency by Age & Season</div>
             <div class='tableauPlaceholder' id='viz1751034138792'>
+              <noscript><a href='#'><img alt='Visit Frequency by Age and Season' src='https://public.tableau.com/static/images/vi/visitfrequencybyageandseason/Sheet1/1_rss.png' /></a></noscript>
               <object class='tableauViz'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                 <param name='embed_code_version' value='3' />
@@ -53,6 +51,13 @@
                 <param name='name' value='visitfrequencybyageandseason/Sheet1' />
                 <param name='tabs' value='no' />
                 <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/vi/visitfrequencybyageandseason/Sheet1/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en-GB' />
               </object>
             </div>
             <p class="insight-box">Young adults visit more frequently during summer and winter breaks, while families peak during holidays.</p>
@@ -61,6 +66,7 @@
           <div class="viz-wrapper">
             <div class="viz-title">Event Impact on Attendance</div>
             <div class='tableauPlaceholder' id='viz1751034952575'>
+              <noscript><a href='#'><img alt='Event Impact on Attendance' src='https://public.tableau.com/static/images/Ev/EventImpactonAttendance/Sheet4/1_rss.png' /></a></noscript>
               <object class='tableauViz'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                 <param name='embed_code_version' value='3' />
@@ -68,6 +74,13 @@
                 <param name='name' value='EventImpactonAttendance/Sheet4' />
                 <param name='tabs' value='no' />
                 <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/Ev/EventImpactonAttendance/Sheet4/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en-GB' />
               </object>
             </div>
             <p class="insight-box">Major premieres and holidays drive significant spikes in cinema attendance.</p>
@@ -77,6 +90,7 @@
         <div class="viz-wrapper">
           <div class="viz-title">Preferred Visit Times by Audience Type</div>
           <div class='tableauPlaceholder' id='viz1751034509523'>
+            <noscript><a href='#'><img alt='Preferred Cinema Visit Times by Audience Type' src='https://public.tableau.com/static/images/Pr/PreferredCinemaVisitTimesbyAudienceType/Sheet3/1_rss.png' /></a></noscript>
             <object class='tableauViz'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
@@ -84,6 +98,13 @@
               <param name='name' value='PreferredCinemaVisitTimesbyAudienceType/Sheet3' />
               <param name='tabs' value='no' />
               <param name='toolbar' value='yes' />
+              <param name='static_image' value='https://public.tableau.com/static/images/Pr/PreferredCinemaVisitTimesbyAudienceType/Sheet3/1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='language' value='en-GB' />
             </object>
           </div>
           <p class="insight-box">Families prefer afternoons, while younger audiences opt for late evening shows.</p>
