--- a/genre.html
+++ b/genre.html
@@ -6,19 +6,18 @@
   <title>Genre Analytics | Cinema Analytics</title>
   <link rel="stylesheet" href="genre.css" />
   <script defer src="genre.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="main">
     <nav class="sidebar">
-      <button class="toggle-btn">☰</button>
       <ul>
-        <li><a href="HomePage.html">Overview</a></li>
-        <li><a href="revenue.html">Revenue & Attendance</a></li>
-        <li><a href="genre.html" class="active">Genre Analytics</a></li>
-        <li><a href="seasonal.html">Seasonal Trends</a></li>
-        <li><a href="customers.html">Customer Insights</a></li>
-        <li><a href="top.html">Top Performing Movies</a></li>
+        <li><a href="HomePage.html" title="Dashboard Overview"><i class="fas fa-chart-pie"></i> Overview</a></li>
+        <li><a href="revenue.html" title="View revenue and attendance breakdown"><i class="fas fa-dollar-sign"></i> Revenue & Attendance</a></li>
+        <li><a href="genre.html" class="active" title="Explore genres and trends"><i class="fas fa-film"></i> Genre Analytics</a></li>
+        <li><a href="seasonal.html" title="Check seasonal viewing patterns"><i class="fas fa-calendar-alt"></i> Seasonal Trends</a></li>
+        <li><a href="customers.html" title="Analyze customer demographics"><i class="fas fa-users"></i> Customer Insights</a></li>
+        <li><a href="top.html" title="See top performing movies"><i class="fas fa-star"></i> Top Movies</a></li>
       </ul>
     </nav>
 
@@ -71,6 +70,21 @@
             </object>
           </div>
           <p class="insight">Blockbusters in the Sci-Fi and Superhero genres heavily contribute to global revenue.</p>
+        </div>
+      </div>
+
+      <div class="stat-highlights">
+        <div class="stat-card">
+          <h3>Comedy</h3>
+          <p>Family and teen comedies remain weekend favorites across all age groups.</p>
+        </div>
+        <div class="stat-card">
+          <h3>Drama</h3>
+          <p>Dramas have surged in popularity during award seasons.</p>
+        </div>
+        <div class="stat-card">
+          <h3>Horror</h3>
+          <p>Low-budget horror consistently yields high ROI in regional markets.</p>
         </div>
       </div>
     </div>
