--- a/top.html
+++ b/top.html
@@ -11,14 +11,13 @@
 <body>
   <div class="main">
     <nav class="sidebar">
-      <button class="toggle-btn">☰</button>
       <ul>
-        <li><a href="HomePage.html">Overview</a></li>
-        <li><a href="revenue.html">Revenue & Attendance</a></li>
-        <li><a href="genre.html">Genre Analytics</a></li>
-        <li><a href="seasonal.html">Seasonal Trends</a></li>
-        <li><a href="customers.html">Customer Insights</a></li>
-        <li><a href="top.html" class="active">Top Movies</a></li>
+        <li><a href="HomePage.html" title="Dashboard Overview"><i class="fas fa-chart-pie"></i> Overview</a></li>
+        <li><a href="revenue.html" title="View revenue and attendance breakdown"><i class="fas fa-dollar-sign"></i> Revenue & Attendance</a></li>
+        <li><a href="genre.html" title="Explore genres and trends"><i class="fas fa-film"></i> Genre Analytics</a></li>
+        <li><a href="seasonal.html" title="Check seasonal viewing patterns"><i class="fas fa-calendar-alt"></i> Seasonal Trends</a></li>
+        <li><a href="customers.html" title="Analyze customer demographics"><i class="fas fa-users"></i> Customer Insights</a></li>
+        <li><a href="top.html" class="active" title="See top performing movies"><i class="fas fa-star"></i> Top Movies</a></li>
       </ul>
     </nav>
 
