--- a/revenue.html
+++ b/revenue.html
@@ -12,27 +12,26 @@
   <div class="main">
     <!-- Sidebar -->
     <nav class="sidebar">
-      <input type="text" id="sidebarSearch" class="search-bar" placeholder="Search..." />
       <ul>
-        <li><a href="HomePage.html">Overview</a></li>
-        <li><a href="revenue.html" class="active">Revenue & Attendance</a></li>
-        <li><a href="genre.html">Genre Analytics</a></li>
-        <li><a href="seasonal.html">Seasonal Trends</a></li>
-        <li><a href="customers.html">Customer Insights</a></li>
-        <li><a href="top.html">Top Performing Movies</a></li>
+        <li><a href="HomePage.html" title="Dashboard Overview"><i class="fas fa-chart-pie"></i> Overview</a></li>
+        <li><a href="revenue.html" class="active" title="View revenue and attendance breakdown"><i class="fas fa-dollar-sign"></i> Revenue & Attendance</a></li>
+        <li><a href="genre.html" title="Explore genres and trends"><i class="fas fa-film"></i> Genre Analytics</a></li>
+        <li><a href="seasonal.html" title="Check seasonal viewing patterns"><i class="fas fa-calendar-alt"></i> Seasonal Trends</a></li>
+        <li><a href="customers.html" title="Analyze customer demographics"><i class="fas fa-users"></i> Customer Insights</a></li>
+        <li><a href="top.html" title="See top performing movies"><i class="fas fa-star"></i> Top Movies</a></li>
       </ul>
     </nav>
 
-    <!-- Main Content -->
-    <div class="content fade-in">
+    <!-- Content -->
+    <div class="content">
       <h1 class="page-title">Revenue & Attendance</h1>
       <p class="page-description">Explore global and regional cinema revenue trends, and see which movies dominated the box office over the years.</p>
 
-      <!-- Data Visualisation Tabs -->
-      <div class="tabs">
-        <div class="tableauPlaceholder" id="viz1749175850565" style="position: relative;">
+      <div class="viz-card">
+        <h2>Global Cinema Revenue</h2>
+        <div class="tableauPlaceholder" id="vizGlobalRevenue">
           <noscript><a href="#"><img alt="Global Cinema Revenue" src="https://public.tableau.com/static/images/EN/ENTCGlobalCinemaRevenue/Sheet2/1_rss.png" /></a></noscript>
-          <object class="tableauViz" width="100%" height="600px" style="display:block;">
+          <object class="tableauViz" width="100%" height="600px">
             <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
             <param name="embed_code_version" value="3" />
             <param name="site_root" value="" />
@@ -48,63 +47,66 @@
             <param name="language" value="en-GB" />
             <param name="filter" value="publish=yes" />
           </object>
-        </div>        
+        </div>
+        <div class="insight-grid">
           <div class="insight-box">The highest spike in global revenue occurred during post-COVID recovery in 2021.</div>
-        </div>
-
-        <div class="viz-card">
-          <h2>Australian Regional Revenue</h2>
-          <p class="viz-description">State-by-state breakdown of Australian cinema revenue.</p>
-          <div class="tableauPlaceholder" id="viz1749176520198" style="position: relative;">
-            <noscript>
-              <a href="#"><img alt="Revenue By Region (States In Australia)" src="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1_rss.png" style="border: none;" /></a>
-            </noscript>
-            <object class="tableauViz" width="100%" height="600px" style="display:block;">
-              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-              <param name="embed_code_version" value="3" />
-              <param name="site_root" value="" />
-              <param name="name" value="RevenueByRegion_17491765003710/Sheet1" />
-              <param name="tabs" value="no" />
-              <param name="toolbar" value="yes" />
-              <param name="static_image" value="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1.png" />
-              <param name="animate_transition" value="yes" />
-              <param name="display_static_image" value="yes" />
-              <param name="display_spinner" value="yes" />
-              <param name="display_overlay" value="yes" />
-              <param name="display_count" value="yes" />
-              <param name="language" value="en-GB" />
-              <param name="filter" value="publish=yes" />
-            </object>
-          </div>
-          <div class="insight-box">NSW and VIC contributed over 60% of the national box office revenue.</div>
-        </div>
-
-        <div class="viz-card">
-          <h2>Top Grossing Movies</h2>
-          <p class="viz-description">Franchise blockbusters have repeatedly dominated cinema revenue charts.</p>
-          <div class="tableauPlaceholder" id="viz1749176802153" style="position: relative;">
-            <noscript>
-              <a href="#"><img alt="Top Grossing Movies of the Last 15 Years" src="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1_rss.png" style="border: none;" /></a>
-            </noscript>
-            <object class="tableauViz" width="100%" height="600px" style="display:block;">
-              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-              <param name="embed_code_version" value="3" />
-              <param name="site_root" value="" />
-              <param name="name" value="TopGrossMovies/Sheet2" />
-              <param name="tabs" value="no" />
-              <param name="toolbar" value="yes" />
-              <param name="static_image" value="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1.png" />
-              <param name="animate_transition" value="yes" />
-              <param name="display_static_image" value="yes" />
-              <param name="display_spinner" value="yes" />
-              <param name="display_overlay" value="yes" />
-              <param name="display_count" value="yes" />
-              <param name="language" value="en-GB" />
-            </object>
-          </div>
-          <div class="insight-box">Avatar remains the top grossing film of the past 15 years with $2.9B in revenue.</div>
+          <div class="insight-box">Revenue doubled in Q4 compared to Q1 for major international markets.</div>
         </div>
       </div>
+
+      <div class="viz-card">
+        <h2>Australian Regional Revenue</h2>
+        <div class="tableauPlaceholder" id="vizAusRevenue">
+          <noscript><a href="#"><img alt="Revenue By Region" src="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1_rss.png" /></a></noscript>
+          <object class="tableauViz" width="100%" height="600px">
+            <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="RevenueByRegion_17491765003710/Sheet1" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param name="static_image" value="https://public.tableau.com/static/images/Re/RevenueByRegion_17491765003710/Sheet1/1.png" />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-GB" />
+            <param name="filter" value="publish=yes" />
+          </object>
+        </div>
+        <div class="insight-grid">
+          <div class="insight-box">NSW and VIC contributed over 60% of the national box office revenue.</div>
+          <div class="insight-box">Queensland saw the fastest YoY revenue growth at 12.5%.</div>
+        </div>
+      </div>
+
+      <div class="viz-card">
+        <h2>Top Grossing Movies (15 Years)</h2>
+        <div class="tableauPlaceholder" id="vizTopMovies">
+          <noscript><a href="#"><img alt="Top Grossing Movies" src="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1_rss.png" /></a></noscript>
+          <object class="tableauViz" width="100%" height="600px">
+            <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="TopGrossMovies/Sheet2" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param name="static_image" value="https://public.tableau.com/static/images/To/TopGrossMovies/Sheet2/1.png" />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-GB" />
+          </object>
+        </div>
+        <div class="insight-grid">
+          <div class="insight-box">Franchise blockbusters dominate the top 10 list consistently.</div>
+          <div class="insight-box">Avatar remains the highest grossing film with $2.9B in global revenue.</div>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
